--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </head>
       <body>
         <div class="wrapper">
-          <header class="<header">
+          <header class="header">
             <div class="logo"></div>
             <div class="hamburger-menu">
               <input id="menu__toggle" type="checkbox"/>
