--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <title>world of travel</title>
          <link rel="stylesheet" href="font.css">
+         <link rel="stylesheet" href="style.css">
       </head>
       <body>
         <div class="wrapper">
