--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
               </nav>
           </header>
           <section class="main">
-            <h1 class="main__title">
-              <span class="main__title-text_highlight">Bali</span>
-              Indonesia
-            </h1>
+            <h1 class="main__title_1">Bali</h1>
+            <h1 class="main__title_2">Indonesia</h1>
             <p class="main__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
             <a class="main__button" href="#">Book travel</a>
           </section>
