--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <h1 class="main__title_2">Indonesia</h1>
             <p class="main__subtitle">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
             <a class="main__button" href="#">Book travel</a>
+            <div class="pictures">
+              <div class="picture_1"></div>
+              <div class="picture_2"></div>
+              <div class="picture_3"></div>
+            </div>
           </section>
         </div>
       </body>
