--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                   <span></span>
                 </label>
                 <ul class="menu__box">
-                 <li><a class="menu__item__box" href="#">start</a></li>
-                 <li><a class="menu__item__box" href="#">services</a></li>
-                 <li><a class="menu__item__box" href="#">about</a></li>
-                 <li><a class="menu__item__box" href="#">blog</a></li>
-                 <li><a class="menu__item__box" href="#">contact us</a></li>
+                 <li><a class="menu__item__box" href="#">Start</a></li>
+                 <li><a class="menu__item__box" href="#">Services</a></li>
+                 <li><a class="menu__item__box" href="#">About</a></li>
+                 <li><a class="menu__item__box" href="#">Blog</a></li>
+                 <li><a class="menu__item__box" href="#">Contact us</a></li>
                 </ul>
               </div>
               <nav class="menu">
-                  <a class="menu__item" href="#">start </a>
-                  <a class="menu__item" href="#">services</a>
-                  <a class="menu__item" href="#">about</a>
-                  <a class="menu__item" href="#">blog</a>
-                  <a class="menu__item" href="#">contact&nbsp;us</a>
+                  <a class="menu__item" href="#">Start </a>
+                  <a class="menu__item" href="#">Services</a>
+                  <a class="menu__item" href="#">About</a>
+                  <a class="menu__item" href="#">Blog</a>
+                  <a class="menu__item" href="#">Contact&nbsp;us</a>
               </nav>
           </header>
           <section class="main">
